@startuml
'https://plantuml.com/class-diagram




class Ship{
-mmsi
-imo
-callsign
-ngenerators
-generatortype
-shipname
-vesselType
-lenght
-width
-capacity
-draft
-bstShipPosition
+getMMSI()
+getImo()
+getBSTPosition()
+getShipName()
+getVesselType()
+getCallSign()


}

class Company{
-BSTShip
+getBSTShip()
}

class ShipPosition{
-aisMessage
-latitude
-longitude
-sog
-cog
-heading
-position
-cargo
-transceiver
+getAisMessage()
+getLatitude()
+getLongitude()
+getSog()
+getCog()
+getHeading()

}
abstract BSTShip{
-root
+search()
+inOrderIterable()
+organizeSmallSummaryInfo()
+orderVesselDes()
}

abstract BSTShipPosition {
-root
+getSize()
+minDate()
+maxDate()
+calculateDistance()
+toRadian()
+inOrderCalculateDistance()
}

class SmallSummary{
-mmsi
-numberOfMovements
-deltaDistance
-realDistance
-vesselType
-sog
+getNumberOfMovements()
+getRealDistance()
+getVesselType()
+getMMSI()
+getSog()
}


class ListSmallSummaryController{
-company
+importCSV()
}




ListSmallSummaryController ...>Company
ListSmallSummaryController ...>BSTShip
ListSmallSummaryController ...>BSTShipPosition
ListSmallSummaryController ...>ShipPosition
ListSmallSummaryController ...>Ship
ListSmallSummaryController ...>SmallSummary
ListSmallSummaryController...>WriteTxt




BSTShip ...>BSTShipPosition
BSTShip ...>Ship
BSTShip ...>SmallSummary


BSTShipPosition ...>ShipPosition

Ship --> ShipPosition
@enduml